# blaueis-libmidea

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md  flight_recorder.md  operations.md  status_db.md  ws_protocol.md
scripts/: blaueis-configure  blaueis-update  blaueis_configure.py  install.sh
