[project]
name = "blaueis-libmidea"
version = "0.1.0"
description = "Blaueis workspace — Midea HVAC serial protocol library"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = [
    "packages/blaueis-core/tests",
    "packages/blaueis-gateway/tests",
    "packages/blaueis-client/tests",
    "packages/blaueis-tools/tests",
]
python_files = ["test_*.py", "validate_*.py"]
asyncio_mode = "auto"
# ``pytest_homeassistant_custom_component`` is installed in this dev env
# so the ha-midea integration tests can use it. pytest auto-discovers
# any installed plugin, and phcc's ``pytest_runtest_setup`` hook calls
# ``disable_socket()`` unconditionally — that's correct for HA-integration
# tests but blocks our own ``test_device_live.py``, which legitimately
# needs to talk to the gateway over the network. libmidea is not an HA
# integration test suite, so we opt the plugin out at the runner level.
# ``pytest-socket`` itself stays loaded; phcc's wrapper is what we drop.
addopts = "--import-mode=importlib -p no:homeassistant -p no:socket"
